--- a/Python Histogram Plotting NumPy, Matplotlib, Pandas & Seaborn/v1.md
+++ b/Python Histogram Plotting NumPy, Matplotlib, Pandas & Seaborn/v1.md
@@ -1,6 +1,38 @@
 # Построение гистограмм в Python: NumPy, Matplotlib, Pandas & Seaborn
 
-Из этого туториала вы получите знания, которые позволят вам делать качественные и готовые к презентации графики гистограмм в Python с различными наборами вариантов представлений и функций.
+Из этого руководства вы получите знания, которые позволят вам делать качественные и готовые к презентации графики гистограмм в Python с различными наборами вариантов представлений и функций.
 
-Если у вас есть начальные знания о программировании в Python, а также в области математической статистики. 
+Если у вас есть начальные знания о программировании в Python, а также в области математической статистики, то вы можете использовать эту статью как универсальный справочник для расчета и визуализации гистограмм в Python, используя библиотеки из научного стека такие как *NumPy*, *Matplotlib*, *Pandas* и *Seaborn*.
+
+Гистограмма - отличный инструмент для быстрой оценки распределения вероятности, который интуитивно понятен почти любой аудитории. Python предлагает несколько различных вариантов расчета и построения гистограмм. Большинство людей знают гистограмму по ее графическому представлению, которое похоже на столбцевую диаграмму:
+
+рисунок
+
+Эта статья поможет вам создать графики, подобные приведенным выше, а также более сложные. Вот что мы рассмотрим в этом руководстве:
+
+- Создание гистограмм в чистом Python без использования сторонних библиотек;
+- Расчет	 гистограмм с помощью *NumPy*, резюмируя основные результаты;
+- Построение полученной гистограммы с помощью *Matplotlib*, *Pandas* и *Seaborn*
+
+
+## Гистограммы на чистом Python
+
+Когда вы готовитесь к построению гистограммы, проще всего не думать об составе данных, необходимо просто рассчитать, сколько раз появляется каждое значение в заданном наборе данных (таблица частот). Такой тип данных как словарь [dictionary](https://docs.python.org/3/tutorial/datastructures.html#dictionaries) в Python хорошо подходит для этой задачи:
+
+	>>> # Need not be sorted, necessarily
+	>>> a = (0, 1, 1, 1, 2, 3, 7, 7, 23)
+	
+	>>> def count_elements(seq) -> dict:
+	...     """Tally elements from `seq`."""
+	...     hist = {}
+	...     for i in seq:
+	...         hist[i] = hist.get(i, 0) + 1
+	...     return hist
+	
+	>>> counted = count_elements(a)
+	>>> counted
+	{0: 1, 1: 3, 2: 1, 3: 1, 7: 2, 23: 1}
+
+*count_elements()* возвращает словарь в виде последовательности с уникальными элементами, состоящими из  ключей и частоты (количество) в качестве значений.
+
 
