--- a/js/Converting Color Spaces in JavaScript/v1.md
+++ b/js/Converting Color Spaces in JavaScript/v1.md
@@ -211,4 +211,4 @@ function hexToRGB(h,isPct) {
 }
 ```
 
-Внутри блока последней инструкции `if`, с помощью унарного оператора `+` значения переменных `r`, `g`и `b` будут приведены к числовому типу данных. Затем метод `toFixed(1)` округлит результат до десятых. Кроме того, у нас не будет целых чисел с `.0` или причудой десятилетней давности, которая производит такие числа, как `0.30000000000000004`. Таким образом, оператор `return`, мы опустили `+`S непосредственно перед первым `r`, `g`и `b`предотвратить `NaN`, вызванные `%`. Теперь мы можем использовать, `hexToRGB("#ff0",true)`чтобы получить `rgb(100%,100%,0%)`!
+Внутри блока последней инструкции `if`, с помощью унарного оператора `+` значения переменных `r`, `g`и `b` будут приведены к числовому типу данных. Затем метод `toFixed(1)` округлит результат до десятых. Кроме того, у нас не будет целых чисел с `.0` или причудой десятилетней давности, которая производит такие числа, как `0.30000000000000004`. Таким образом, оператор `return`, мы опустили `+`S непосредственно перед первым `r`, `g`и `b`предотвратить `NaN`, вызванные `%`. Теперь мы можем использовать, `hexToRGB("#ff0",true)`чтобы получить `rgb(100%,100%,0%)`! sdsds
